# ashedit

./: CMakeLists.txt  FORMAT.txt  LICENSE.txt  README.md  README.txt  change_layer.cpp  general.cpp  general.h  icon.h  main.cpp  ryori.h  widgets.h
include/: icon.h  widgets.h
src/: general.cpp  main.cpp
