project(AshEdit)
cmake_minimum_required(VERSION 2.6)

option(MO2 "Build for Monster RPG 2 format levels" off)
option(TGA "Use .tga tile sheets" off)
option(USE_8X8 "Use 8x8 tiles" off)
option(SS "Build for SS" off)

if(NOT ("${USER_INCLUDE_PATH}" STREQUAL ""))
	include_directories(${USER_INCLUDE_PATH})
endif(NOT ("${USER_INCLUDE_PATH}" STREQUAL ""))
if(NOT ("${USER_LIBRARY_PATH}" STREQUAL ""))
	link_directories(${USER_LIBRARY_PATH})
endif(NOT ("${USER_LIBRARY_PATH}" STREQUAL ""))

include_directories("include")

set(ASHEDIT_SRC src/main.cpp src/general.cpp)

set(FLAGS "")

if(WIN32)
	if(NOT SS AND MO2)
		set(FLAGS "${FLAGS} /DMONSTERRPG2")
	endif()
	if(SS OR TGA)
		set(FLAGS "${FLAGS} /DUSE_TGA")
	endif()
	if(SS OR USE_8X8)
		set(FLAGS "${FLAGS} /DUSE_8X8")
	endif()

	if(CMAKE_BUILD_TYPE MATCHES Debug)
		set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${FLAGS} /MTd")
	else()
		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${FLAGS} /MT")
	endif()
	list(APPEND ASHEDIT_SRC "src/icon.rc")
	add_executable(AshEdit WIN32 ${ASHEDIT_SRC})
	if(CMAKE_BUILD_TYPE MATCHES Debug)
		target_link_libraries(AshEdit "tgui2d" "allegro_monolith-debug" "freetype_static" "libpng16_static" "jpeg-static" "zlibstatic" "opengl32" "winmm" "psapi" "shlwapi")
	else()
		target_link_libraries(AshEdit "tgui2" "allegro_monolith-static" "freetype_static" "libpng16_static" "jpeg-static" "zlibstatic" "opengl32" "winmm" "psapi" "shlwapi")
	endif()
else()
	if(NOT SS AND MO2)
		set(FLAGS "${FLAGS} -DMONSTERRPG2")
	endif()
	if(SS OR TGA)
		set(FLAGS "${FLAGS} -DUSE_TGA")
	endif()
	if(SS OR USE_8X8)
		set(FLAGS "${FLAGS} -DUSE_8X8")
	endif()
	if(CMAKE_BUILD_TYPE MATCHES Debug)
		set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${FLAGS}")
	else()
		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${FLAGS}")
	endif()
	add_executable(AshEdit ${ASHEDIT_SRC})
	target_link_libraries(AshEdit "tgui2" "allegro_monolith-static")
endif()